--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "eject": "expo eject"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "expo": "~45.0.0",
         "expo-font": "^10.1.0",
         "expo-splash-screen": "^0.15.1",
